--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -369,6 +369,18 @@
     <ClCompile Include="417. pacific-atlantic-water-flow.cpp" />
     <ClCompile Include="419. battleships-in-a-board.cpp" />
     <ClCompile Include="421. maximum-xor-of-two-numbers-in-an-array.cpp" />
+    <ClCompile Include="423. reconstruct-original-digits-from-english.cpp" />
+    <ClCompile Include="424. longest-repeating-character-replacement.cpp" />
+    <ClCompile Include="427. construct-quad-tree.cpp" />
+    <ClCompile Include="429. n-ary-tree-level-order-traversal.cpp" />
+    <ClCompile Include="430. flatten-a-multilevel-doubly-linked-list.cpp" />
+    <ClCompile Include="433. minimum-genetic-mutation.cpp" />
+    <ClCompile Include="434. number-of-segments-in-a-string.cpp" />
+    <ClCompile Include="435. non-overlapping-intervals.cpp" />
+    <ClCompile Include="436. find-right-interval.cpp" />
+    <ClCompile Include="437. path-sum-iii.cpp" />
+    <ClCompile Include="438. find-all-anagrams-in-a-string.cpp" />
+    <ClCompile Include="441. arranging-coins.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
