--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -381,10 +381,22 @@
     <ClCompile Include="437. path-sum-iii.cpp" />
     <ClCompile Include="438. find-all-anagrams-in-a-string.cpp" />
     <ClCompile Include="441. arranging-coins.cpp" />
-    <ClCompile Include="5213. play-with-chips.cpp" />
-    <ClCompile Include="5214. longest-arithmetic-subsequence-of-given-difference.cpp" />
-    <ClCompile Include="5215. path-with-maximum-gold.cpp" />
-    <ClCompile Include="5216. count-vowels-permutation.cpp" />
+    <ClCompile Include="442. find-all-duplicates-in-an-array.cpp" />
+    <ClCompile Include="443. string-compression.cpp" />
+    <ClCompile Include="445. add-two-numbers-ii.cpp" />
+    <ClCompile Include="447. number-of-boomerangs.cpp" />
+    <ClCompile Include="448. find-all-numbers-disappeared-in-an-array.cpp" />
+    <ClCompile Include="449. serialize-and-deserialize-bst.cpp" />
+    <ClCompile Include="450. delete-node-in-a-bst.cpp" />
+    <ClCompile Include="451. sort-characters-by-frequency.cpp" />
+    <ClCompile Include="452. minimum-number-of-arrows-to-burst-balloons.cpp" />
+    <ClCompile Include="453. minimum-moves-to-equal-array-elements.cpp" />
+    <ClCompile Include="454. 4sum-ii.cpp" />
+    <ClCompile Include="455. assign-cookies.cpp" />
+    <ClCompile Include="456. 132-pattern.cpp" />
+    <ClCompile Include="457. circular-array-loop.cpp" />
+    <ClCompile Include="459. repeated-substring-pattern.cpp" />
+    <ClCompile Include="461. hamming-distance.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
