--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -1148,5 +1148,11 @@
     <ClCompile Include="470. implement-rand10-using-rand7.cpp">
       <Filter>源文件\SpecialAlg\随机数</Filter>
     </ClCompile>
+    <ClCompile Include="446. arithmetic-slices-ii-subsequence.cpp">
+      <Filter>源文件\CommonAlg\DP</Filter>
+    </ClCompile>
+    <ClCompile Include="458. poor-pigs.cpp">
+      <Filter>源文件\SpecialAlg\Math</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
