--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -409,6 +409,9 @@
     <ClCompile Include="468. validate-ip-address.cpp" />
     <ClCompile Include="470. implement-rand10-using-rand7.cpp" />
     <ClCompile Include="473. Matchsticks to Square.cpp" />
+    <ClCompile Include="5223. queens-that-can-attack-the-king.cpp" />
+    <ClCompile Include="5224. dice-roll-simulation.cpp" />
+    <ClCompile Include="5225. maximum-equal-frequency.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
