--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -1154,5 +1154,14 @@
     <ClCompile Include="458. poor-pigs.cpp">
       <Filter>源文件\SpecialAlg\Math</Filter>
     </ClCompile>
+    <ClCompile Include="5223. queens-that-can-attack-the-king.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5224. dice-roll-simulation.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5225. maximum-equal-frequency.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
