--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="public.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="estimateFuncTime.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -1154,15 +1157,6 @@
     <ClCompile Include="458. poor-pigs.cpp">
       <Filter>源文件\SpecialAlg\Math</Filter>
     </ClCompile>
-    <ClCompile Include="5223. queens-that-can-attack-the-king.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="5224. dice-roll-simulation.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="5225. maximum-equal-frequency.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="460. lfu-cache.cpp">
       <Filter>源文件\SpecialAlg\Design</Filter>
     </ClCompile>
@@ -1170,18 +1164,18 @@
       <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
     <ClCompile Include="472. concatenated-words.cpp">
+      <Filter>源文件\HardAlg\前缀树</Filter>
+    </ClCompile>
+    <ClCompile Include="5230. check-if-it-is-a-straight-line.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5088. missing-number-in-arithmetic-progression.cpp">
+    <ClCompile Include="5231. remove-sub-folders-from-the-filesystem.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5089. meeting-scheduler.cpp">
+    <ClCompile Include="5232. replace-the-substring-for-balanced-string.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5090. toss-strange-coins.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="5111. divide-chocolate.cpp">
+    <ClCompile Include="5233. maximum-profit-in-job-scheduling.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
