--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -413,13 +413,10 @@
     <ClCompile Include="470. implement-rand10-using-rand7.cpp" />
     <ClCompile Include="472. concatenated-words.cpp" />
     <ClCompile Include="473. Matchsticks to Square.cpp" />
-    <ClCompile Include="5230. check-if-it-is-a-straight-line.cpp" />
-    <ClCompile Include="5231. remove-sub-folders-from-the-filesystem.cpp" />
-    <ClCompile Include="5232. replace-the-substring-for-balanced-string.cpp" />
-    <ClCompile Include="5233. maximum-profit-in-job-scheduling.cpp" />
-    <ClCompile Include="5239. circular-permutation-in-binary-representation.cpp" />
-    <ClCompile Include="5240. maximum-length-of-a-concatenated-string-with-unique-characters.cpp" />
-    <ClCompile Include="5241. tiling-a-rectangle-with-the-fewest-squares.cpp" />
+    <ClCompile Include="5096. array-transformation.cpp" />
+    <ClCompile Include="5097. design-a-leaderboard.cpp" />
+    <ClCompile Include="5098. tree-diameter.cpp" />
+    <ClCompile Include="5115. palindrome-removal.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
