--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -1166,25 +1166,16 @@
     <ClCompile Include="472. concatenated-words.cpp">
       <Filter>源文件\HardAlg\前缀树</Filter>
     </ClCompile>
-    <ClCompile Include="5230. check-if-it-is-a-straight-line.cpp">
+    <ClCompile Include="5097. design-a-leaderboard.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5231. remove-sub-folders-from-the-filesystem.cpp">
+    <ClCompile Include="5096. array-transformation.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5232. replace-the-substring-for-balanced-string.cpp">
+    <ClCompile Include="5098. tree-diameter.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5233. maximum-profit-in-job-scheduling.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="5239. circular-permutation-in-binary-representation.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="5240. maximum-length-of-a-concatenated-string-with-unique-characters.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="5241. tiling-a-rectangle-with-the-fewest-squares.cpp">
+    <ClCompile Include="5115. palindrome-removal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
