--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -413,10 +413,10 @@
     <ClCompile Include="470. implement-rand10-using-rand7.cpp" />
     <ClCompile Include="472. concatenated-words.cpp" />
     <ClCompile Include="473. Matchsticks to Square.cpp" />
-    <ClCompile Include="5096. array-transformation.cpp" />
-    <ClCompile Include="5097. design-a-leaderboard.cpp" />
-    <ClCompile Include="5098. tree-diameter.cpp" />
-    <ClCompile Include="5115. palindrome-removal.cpp" />
+    <ClCompile Include="5247. minimum-swaps-to-make-strings-equal.cpp" />
+    <ClCompile Include="5248. count-number-of-nice-subarrays.cpp" />
+    <ClCompile Include="5249. minimum-remove-to-make-valid-parentheses.cpp" />
+    <ClCompile Include="5250. check-if-it-is-a-good-array.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
