--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -1166,16 +1166,16 @@
     <ClCompile Include="472. concatenated-words.cpp">
       <Filter>源文件\HardAlg\前缀树</Filter>
     </ClCompile>
-    <ClCompile Include="5255. cells-with-odd-values-in-a-matrix.cpp">
+    <ClCompile Include="5108. encode-number.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5256. reconstruct-a-2-row-binary-matrix.cpp">
+    <ClCompile Include="5109. smallest-common-region.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5257. number-of-closed-islands.cpp">
+    <ClCompile Include="5110. synonymous-sentences.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5258. maximum-score-words-formed-by-letters.cpp">
+    <ClCompile Include="5125. handshakes-that-dont-cross.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
